--- a/DemoAngular/src/app/heroes/heroes.component.css
+++ b/DemoAngular/src/app/heroes/heroes.component.css
@@ -1,31 +1,32 @@
-.selected {
-    background-color: #CFD8DC !important;
-    color: white;
-}
-.heroes {
-    margin: 0 0 2em 0;
+.heroes{
     list-style-type: none;
-    padding: 0;
+    margin: 15px;
+    padding:0px;
     width: 15em;
 }
-.heroes li {
+.selected{
+    background-color: #CFD8DC ;
+    color: white;
+}
+.heroes li{
     cursor: pointer;
     position: relative;
     left: 0;
     background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
+    margin: 5px;
+    padding: 0.3em 0;
     height: 1.6em;
     border-radius: 4px;
-}
-.heroes li.selected:hover {
-    background-color: #BBD8DC !important;
-    color: white;
 }
 .heroes li:hover {
     color: #607D8B;
     background-color: #DDD;
-    left: .1em;
+    left: 0.1em;
+}
+
+.heroes li.selected:hover {
+    background-color: #BBD8DC !important;
+    color: white;
 }
 .heroes .text {
     position: relative;
@@ -42,6 +43,6 @@
     left: -1px;
     top: -4px;
     height: 1.8em;
-    margin-right: .8em;
+    margin-right: 0.8em;
     border-radius: 4px 0 0 4px;
 }
