--- a/DemoAngular/src/app/heroes/heroes.component.html
+++ b/DemoAngular/src/app/heroes/heroes.component.html
@@ -1,9 +1,10 @@
 
+<h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes"
-      [class.selected]="hero === selectedHero"
-      (click)="onSelect(hero)">
+  <li *ngFor="let hero of heroes" (click)="onSelected(hero);"
+    [class.selected]="hero === selectedHero"
+  >
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
+  <app-hero-detail [hero]="selectedHero"></app-hero-detail>
 </ul>
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
